<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.sukharev.myrecipes.addrecipe.AddRecipeFragment"
    tools:showIn="@layout/activity_add_recipe">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_recipe_title_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/add_recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:id="@+id/add_recipe_rating_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>
    <EditText
        android:id="@+id/add_recipe_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/add_recipe_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
